## Process this file with automake to produce Makefile.in

# Include M4 macros
ACLOCAL_AMFLAGS = -I m4

# Subdirectories
SUBDIRS = . src pyext

#
INCLUDES =

#
CLEANFILES =

# Models to distribute
models = test/data/crab.xml

# Distribute models
EXTRA_DIST = $(models)
modelsdir = $(datadir)/models
models_DATA = $(models)

